--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,3 +66,11 @@ a {
     }
   }
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
