--- a/styles/sell.scss
+++ b/styles/sell.scss
@@ -1,29 +1,103 @@
 .sell-container {
+  position: absolute;
   width: 100%;
-  height: 80vh;
   margin-top: 50px;
+  background-image: url("/bg.jpg");
+  height: 93vh;
+  background-size: cover;
+  background-position: 80% 30%;
+
   @include center;
   form {
-    background-color: rgba(0, 240, 196, 0.085);
-    padding: 20px 40px 40px 20px;
+    backdrop-filter: blur(5px);
+    padding: 20px 40px 10px 20px;
     border-radius: 10px;
-    @include center-col;
-    h2 {
-      text-transform: capitalize;
-      font-size: 30px;
-      position: relative;
-      &::before{
-          content: '';
-          position: absolute;
-          width: 100px;
-          height: 3px;
-          background-color: rgb(0, 0, 0);
-          bottom: -2px;
-          border-radius: 20px;
+    margin-top: 20px;
+    text-transform: capitalize;
+    width: 500px;
+    box-shadow: 0 0 10px rgb(103, 25, 25);
+    color: white;
+    .page-handler {
+      display: flex;
+      justify-content: center;
+      & > * {
+        color: rgb(31, 31, 31);
+        width: 50%;
+        margin: 0 10px;
+        text-transform: capitalize;
+        padding: 10px 20px;
+        border-radius: 7px;
+        font-size: 17px;
+        font-weight: 700;
+        background-color: rgba(255, 255, 255, 0.616);
       }
     }
-    .sell-input {
-      margin-top: 10px;
+    .active {
+      display: block;
+    }
+    .unactive {
+      display: none;
+    }
+    h1 {
+      padding: 10px;
+      text-align: center;
+    }
+    .sell-content {
+      padding: 20px 20px 0 20px;
+      .list-add {
+        padding: 10px;
+        font-weight: 600;
+        font-size: 18px;
+        color: white;
+        width: fit-content;
+        border-radius: 7px;
+        background-color: #d85246;
+      }
+      .list-add-inc {
+        margin-top: 10px;
+      }
+      .upload{
+        margin-top: -50px;
+      }
+      .sell-input {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        label {
+          font-size: 20px;
+          font-weight: 600;
+          cursor: pointer;
+          width: fit-content;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          &>*{
+            margin-left: 5px;
+          }
+        }
+        input[type=submit]{
+          font-weight: 700;
+          font-size: 18px;
+          text-transform: capitalize;
+          cursor: pointer;
+        }
+        input,
+        textarea {
+          border: none;
+          outline: none;
+          height: 40px;
+          padding: 10px;
+          border-radius: 5px;
+          background-color: transparent;
+          color: rgb(50, 50, 50);
+          background-color: rgba(240, 248, 255, 0.444);
+          font-weight: 600;
+        }
+        textarea {
+          height: 150px;
+          resize: none;
+        }
+      }
     }
   }
 }
