--- a/styles/buy.scss
+++ b/styles/buy.scss
@@ -24,15 +24,15 @@
         border: none;
         outline: none;
         cursor: pointer;
-        width: 200px;
+        width: fit-content;
         margin: 10px;
-        padding: 10px 20px;
+        padding: 10px 50px;
         text-transform: capitalize;
         border-radius: 10px;
         background-color: $loginbg;
         font-weight: 600;
-        font-size: 20px;
-        box-shadow: 0 0 5px #01e6a1;
+        font-size: 22px;
+        background-color: #dd5e4b;
       }
     }
   }
