--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,16 +1,55 @@
 .listprodect {
-    padding: 20px;
+  padding: 20px;
 }
 
 .home-container {
-    width: 100%;
+  width: 100%;
 
-    .home-intro {
-        background-image: url("/f3.jpg");
-        width: 100%;
-        height: 100vh;
-        background-size: cover;
-        background-position: 40% 25%;
-        background-position: fixed;
+  .home-intro {
+    background-image: url("/f3.jpg");
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: 40% 25%;
+    background-position: fixed;
+    .home-welcome {
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      left: 0;
+      transform: translate(20px, -50%);
+      padding: 10px 30px;
+      & > * {
+        display: block;
+        font-size: 70px;
+        text-transform: capitalize;
+        font-weight: 700;
+        color: white;
+        transition: 0.5s;
+      }
+      span:nth-child(1) {
+        transform: translate(0);
+        color: transparent;
+        animation: welcome 1s 0.5s forwards ease-out;
+      }
+      span:nth-child(2) {
+        transform: translate(120px);
+        color: transparent;
+        animation: welcome2 1s 0.7s forwards ease-out;
+      }
     }
+  }
+}
+
+@keyframes welcome {
+  100% {
+    transform: translate(50px);
+    color: aliceblue;
+  }
+}
+@keyframes welcome2 {
+  100% {
+    transform: translate(70px);
+    color: aliceblue;
+  }
 }
