--- a/styles/map.scss
+++ b/styles/map.scss
@@ -1,4 +1,8 @@
-.map-container{
-    margin: 100px 50px;
-    background-color: aqua;
+.map-container {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    min-height:100vh;
+    background-color: #dd5e4b;;
 }
