--- a/styles/negotiate.scss
+++ b/styles/negotiate.scss
@@ -2,8 +2,8 @@
   background-color: #dd5e4b;
   width: 100%;
   position: absolute;
-  height: 100vh;
   @include center;
+  padding: 30px;
   form {
     width: 500px;
     background-color: #b7b7b75d;
