--- a/styles/home.scss
+++ b/styles/home.scss
@@ -8,10 +8,11 @@
   .home-intro {
     background-image: url("/f3.jpg");
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     background-size: cover;
     background-position: 40% 25%;
     background-position: fixed;
+
     .home-welcome {
       position: absolute;
       z-index: 1;
@@ -19,7 +20,8 @@
       left: 0;
       transform: translate(20px, -50%);
       padding: 10px 30px;
-      & > * {
+
+      &>* {
         display: block;
         font-size: 70px;
         text-transform: capitalize;
@@ -27,11 +29,13 @@
         color: white;
         transition: 0.5s;
       }
+
       span:nth-child(1) {
         transform: translate(0);
         color: transparent;
         animation: welcome 1s 0.5s forwards ease-out;
       }
+
       span:nth-child(2) {
         transform: translate(120px);
         color: transparent;
@@ -47,9 +51,31 @@
     color: aliceblue;
   }
 }
+
 @keyframes welcome2 {
   100% {
     transform: translate(70px);
     color: aliceblue;
+  }
+}
+
+.breeds-types {
+  background-color: #dd5e4b;
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    background-image: linear-gradient(to bottom, transparent, #dd5e4bc5, #dd5e4b);
+    top: -100px;
+  }
+
+  h1 {
+    color: white;
+    text-align: center;
+    width: 100%;
+    margin-top: 20px;
   }
 }
