--- a/styles/buy.scss
+++ b/styles/buy.scss
@@ -65,7 +65,7 @@
 
   .nego-li {
     display: flex;
-
+    flex-wrap: wrap;
     &>* {
       margin: 5px;
       box-shadow: 0 0 10px rgb(155, 155, 155);
