--- a/styles/home.scss
+++ b/styles/home.scss
@@ -79,3 +79,20 @@
     margin-top: 20px;
   }
 }
+
+.list-type-home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  &>*{
+    margin: 10px;
+    button{
+      color: white;
+      background-color: #dd5e4b;
+      padding: 10px 20px;
+      border-radius: 5px;
+    }
+  }
+}
